fetch trading fees
